# backend

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  fastapi.py
app/core/: db.py  settings.py
app/model/: Memory.py
app/modules/elasticsearch/: __init__.py  db.py
app/modules/geoapify/: api.py
app/modules/image_metadata_extraction/: __init__.py  description.py
app/modules/metadata_extraction/: __init__.py  description.py  ocr.py
app/routes/: memory.py  upload.py
app/schema/: MemoryQuery.py  __init__.py
caddy/: Caddyfile
migrations/: env.py
migrations/versions/: 7b63bee3082e_separated_address_and_coordinates_into_.py  a504968f8fb4_init_database_migration.py
