[tool.poetry]
name = "memento-backend"
version = "0.1.0"
description = ""
authors = ["NoahCardoza <noahcardoza@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
openai = "^1.48.0"
pillow = "^10.4.0"
pytesseract = "^0.3.13"
numpy = "<2"
opencv-python = "^4.10.0.84"
requests = "^2.32.3"
elasticsearch = "^8.15.1"
torch = "2.2.2"
sentence-transformers = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
